removinfDataLocalAndUpdatingScript